# wip-pathtracer

./: Cargo.toml  README.md
src/: common.rs  lib.rs  light.rs  main.rs  material.rs  object.rs  render.rs  shape.rs
