[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
default = "0.1.2"
enum_dispatch = "0.3.11"
float-ord = "0.3.2"
glam = { version = "0.23.0", features = ["rand", "fast-math"] }
picture = "0.2.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"
